; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/serial/extr_iuu_phoenix.c_iuu_close.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/serial/extr_iuu_phoenix.c_iuu_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_serial_port = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usb_serial_port*)* @iuu_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iuu_close(%struct.usb_serial_port* %0) #0 {
  %2 = alloca %struct.usb_serial_port*, align 8
  store %struct.usb_serial_port* %0, %struct.usb_serial_port** %2, align 8
  %3 = load %struct.usb_serial_port*, %struct.usb_serial_port** %2, align 8
  %4 = call i32 @iuu_uart_off(%struct.usb_serial_port* %3)
  %5 = load %struct.usb_serial_port*, %struct.usb_serial_port** %2, align 8
  %6 = getelementptr inbounds %struct.usb_serial_port, %struct.usb_serial_port* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @usb_kill_urb(i32 %7)
  %9 = load %struct.usb_serial_port*, %struct.usb_serial_port** %2, align 8
  %10 = getelementptr inbounds %struct.usb_serial_port, %struct.usb_serial_port* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @usb_kill_urb(i32 %11)
  %13 = load %struct.usb_serial_port*, %struct.usb_serial_port** %2, align 8
  %14 = call i32 @iuu_led(%struct.usb_serial_port* %13, i32 0, i32 0, i32 61440, i32 255)
  ret void
}

declare dso_local i32 @iuu_uart_off(%struct.usb_serial_port*) #1

declare dso_local i32 @usb_kill_urb(i32) #1

declare dso_local i32 @iuu_led(%struct.usb_serial_port*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
